# data-ops

./: .dockerignore  .gitignore  Makefile  README.md  delegates-survey-pg-connector.json  docker-compose-airflow.yml  docker-compose-api.yml  docker-compose-dagster.yml  docker-compose-metabase.yml  docker-compose-nifi.yml  docker-compose-open-metadata.yml  docker-compose-superset.yml  docker-compose.airbyte.yml  docker-compose.airflow.yml  docker-compose.api.yml  docker-compose.app.yml  docker-compose.db.yml  docker-compose.grafana.yml  docker-compose.kafka.yml  docker-compose.metadadata.yml  docker-compose.superset.yml  docker-compose.warehouse.yml  docker-compose.yml  init-replica-set.js  package-lock.json  package.json  prometheus.yml  register-avro-schema-for-delegates-survey.py  register-customer-postgresdb-connector.json  register-delegates-survey-pg-connector.json  register-delegates-survey-postgresdb-connector.json  register-mongodb-atlas-source-connector-for-participants-survey.json  register-participants-mongodb-connector.json  register-postgresdb-source-connector-for-customer-v1.json  register-postgresdb-source-connector-for-delegates-survey.json  requirements.txt
01-databases/01-postgres/: Dockerfile  Readme.md  docker-compose-postgres.yml
01-databases/02-mysql/: Dockerfile  docker-compose-mysql.yml
01-databases/03-mongodb/: docker-compose-mongodb.yml
01-databases/03-mysql/: Readme.md
01-databases/elasticsearch/: Readme.md  docker-compose-elasticsearch.yml
01-databases/mongodb/: docker-compose-mongodb.yml
01-databases/mysql/: Dockerfile  docker-compose-mysql.yml
01-databases/neo4j/: Readme.md  docker-compose-neo4j.yml
04-data-warehouse/: Readme.md
06-dashboards/: Readme.md
07-ml-model/: Readme.md
08-cron-jobs/: Readme.md
ai/: Readme.md
api-with-mongo/: package-lock.json
api-with-postgreSQL/: Dockerfile  package.json
api-with-postgresql/: Readme.md
api-with-postgresql-and-express.js/: Dockerfile  Readme.md  app.js  package-lock.json  package.json
cp-kafka-connect/: .gitignore  Dockerfile
customer-api/: Dockerfile  Readme.md  app.js  index.js  package-lock.json  package.json
data-products/: Readme.md
kafka-producer-with-node.js/: Dockerfile  Readme.md  package-lock.json  package.json
kafka-schema/: delegates-survey.avsc
metadata/: Readme.md
ml-models/: Readme.md
mongo-notification-system/: Dockerfile  package-lock.json
mongo-to-kafka/: Dockerfile  package-lock.json  package.json
mongodb-change-stream-app/: Readme.md  package.json
next.js-app/: Dockerfile  README.md  package-lock.json  package.json  questions.js
next.js-web-portal/: Dockerfile  README.md  package-lock.json  package.json
pgadmin_volume/: pgadmin4.db
postgresql-and-express.js-api/: Readme.md  app.js
python-app/: Dockerfile  Readme.md
sale-order-api/: Dockerfile  Readme.md  index.js  package.json
schema/: delegates-survey.avsc
scripts/: register-avro-schema-for-delegates-survey.py
spring-boot-api-with-postgresql/: Readme.md  build.gradle  settings.gradle
spring-boot-data-pipeline/: Dockerfile  Readme.md  build.gradle  settings.gradle
trino/: Readme.md  docker-compose-trino.yml
web-apps/: Readme.md
workflow-orchestration-tools/: Readme.md
workflows/dagster_v2/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Readme.md  definitions.py  docker-compose-dagster.base.yml  docker-compose-dagster.local-rds.yml  docker-compose-dagster.local.yml  docker-compose-dagster.prod.yml  docker-compose-dagster.yml  pyproject.toml  requirements.txt
workflows/dagster_v2/dagster_home/: dagster.yaml  workspace.yaml
workflows/dagster_v2/dagster_pipeline/: __init__.py  definitions.py
workflows/dagster_v2/dagster_pipeline/assets/data_migration/: civ_regional_data_migration.py
workflows/dagster_v2/dagster_pipeline/assets/etl/: mysql_to_clickhouse_asset.py  postgres_to_clickhouse_asset.py
workflows/dagster_v2/dagster_pipeline/assets/maintenance/: clickhouse_optimization.py  optimize_clickhouse_asset.py
workflows/dagster_v2/dagster_pipeline/connectors/destinations/: base_destination.py  clickhouse_destination.py
workflows/dagster_v2/dagster_pipeline/connectors/sink/: base_sink_connector.py  clickhouse_sink_connector.py
workflows/dagster_v2/dagster_pipeline/connectors/sources/: base_source_connector.py  mysql_source_connector.py  postgres_source_connector.py
workflows/dagster_v2/dagster_pipeline/pipelines/etl/: mysql_to_clickhouse.py
workflows/dagster_v2/dagster_pipeline/resources/: __init__.py  clickhouse_resource.py  dagster_postgres_resource.py  mysql_resource.py  postgres_resource.py  registry.py
workflows/dagster_v2/dagster_pipeline/schemas/mysql/amtdb/: accounts.yml
workflows/dagster_v2/dagster_pipeline/schemas/mysql/sales-service/: leads.yml
workflows/dagster_v2/dagster_pipeline/schemas/mysql/sales-service-dev/: leadsources.yml
workflows/dagster_v2/dagster_pipeline/schemas/mysql/sales_service/: leads.yml  leadsources.yml
workflows/dagster_v2/dagster_pipeline/schemas/mysql/sales_service_dev/: leadsources.yml
workflows/dagster_v2/dagster_pipeline/schemas/postgres/sunculture_ep/: premise_details.yml  premises.yml
workflows/dagster_v2/dagster_pipeline/schemas/templates/: clickhouse_table_schema_template.yml  mysql_table_schema_template.yml  postgres_table_schema_template.yml  table_schema_template.yml
workflows/dagster_v2/dagster_pipeline/utils/: logging_config.py  schema_loader.py  state_manager.py  type_mapper.py
workflows/dagster_v2/dagster_pipeline/utils/factories/: __init__.py  base_factory.py  base_maintenance_factory.py  etl_base_factory.py  etl_mysql_to_clickhouse_factory.py  etl_postgres_to_clickhouse_factory.py  mysql_to_clickhouse_factory.py  optimize_clickhouse_factory.py  postgres_to_clickhouse_factory.py
workflows/dagster_v2/docs/: architecture.md  assets.md  scripts.md
workflows/dagster_v2/scripts/: cleanup_clickhouse_tables.py  verify_clickhouse_tables.py
(+617 files in other folders)
