[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-pipeline"
version = "0.1.0"
description = "Production ETL pipeline with Dagster for MySQL/Postgres → ClickHouse"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Rodgers Nyangweso", email = "rodgers@example.com"}
]

dependencies = [
    # Dagster core
    "dagster==1.8.7",
    "dagster-webserver==1.8.7",
    "dagster-postgres==0.24.7",
    
    # Database drivers
    "psycopg2-binary==2.9.9",
    "pymysql==1.1.1",
    "clickhouse-driver==0.2.9",
    "clickhouse-connect==0.7.19",  # Alternative ClickHouse driver
    
    # Data processing
    "pandas==2.2.2",
    "polars==1.9.0",  # Memory-efficient alternative to pandas
    "pyarrow==17.0.0",  # For Parquet support
    
    # Utilities
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",  # For data validation
    
    # AWS (for S3, future)
    "boto3==1.35.36",
    
    # Monitoring & Logging
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "black==24.8.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
]

test = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "faker==30.3.0",
]

[tool.setuptools]
packages = ["dagster_pipeline"]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["dagster_pipeline/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=dagster_pipeline --cov-report=html --cov-report=term"